<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollSQLite"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtSqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" 
        android:layout_margin="50dp"/>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="@dimen/btnWith"
        android:layout_height="wrap_content"
        android:text="@string/crear_conectar" 
        android:layout_gravity="center"/>
    
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connetion_status"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:layout_gravity="center" 
        android:textColor="@color/green_text" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnPopulate"
        android:layout_width="@dimen/btnWith"
        android:layout_height="wrap_content"
        android:text="@string/btn_populate" 
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txtPopulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populate_status"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:layout_gravity="center" 
        android:textColor="@color/green_text"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/btnExamine"
        android:layout_width="@dimen/btnWith"
        android:layout_height="wrap_content"
        android:text="@string/btn_examinar_db" 
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/btnInsert"
        android:layout_width="@dimen/btnWith"
        android:layout_height="wrap_content"
        android:text="@string/add_user" 
        android:layout_gravity="center" 
        android:layout_marginTop="18dp"/>

	</LinearLayout>

</ScrollView>
