<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icoList"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/icono_lista"
        android:src="@android:drawable/ic_lock_power_off" />

    <TextView
        android:id="@+id/LblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icoList"
        android:layout_toRightOf="@+id/icoList"
        android:text="@string/title"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LblSubTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LblTitulo"
        android:layout_below="@+id/LblTitulo"
        android:text="@string/subtitle"
        android:textSize="12dp"
        android:textStyle="normal" />

</RelativeLayout>