<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ex_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/group"/>
        
    </LinearLayout>        
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ex_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_title" 
            android:textSize="18dp" 
            android:textStyle="bold" 
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ex_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_subtitle" 
                android:textSize="12dp" 
                android:textStyle="normal" 
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

</LinearLayout>