<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/about_image" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" 
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/aboutName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" 
                    android:textStyle="bold|italic" 
                    android:textSize="16dp" 
                    android:layout_gravity="center" 
                    android:typeface="normal"/>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/aboutVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version" 
                    android:textSize="12dp" 
                    android:layout_gravity="center_horizontal" 
                    android:typeface="normal"/>

            </LinearLayout>
                        
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freeware_license" 
                    android:textSize="12dp" 
                    android:layout_gravity="center_horizontal" 
                    android:typeface="normal"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/aboutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="15dp">
    </ListView>

</LinearLayout>